--- a/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/Shared/_MainMenu.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/Shared/_MainMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<ul class="sidebar-menu" data-widget="tree">
-    <li class="header">MENU</li>
+    <li class="header">menu</li>
     <!-- Optionally, you can add icons to the links -->
-    <li><a asp-area="Admin" asp-controller="ProductAdmin" asp-action="Index"><i class="fa fa-dashboard" aria-hidden="true"></i> <span>Home articles</span></a></li>
+    <li><a asp-area="Admin" asp-controller="ProductAdmin" asp-action="Index"><i class="fa fa-dashboard" aria-hidden="true"></i> <span>Huisjes beheer</span></a></li>
 </ul>
