edit and delete werkend

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
@@ -46,7 +46,7 @@
                     <div class="col-md-3" id="@( "product" + @item.ID )" style=" padding:0px; text-align: center; align-content:center; text-decoration: none;">
                         <a asp-action="Detailpagina" asp-route-id="@item.ID" style="text-decoration: none;">
 
-                            <div class="card" style="height: 450px; text-align: center; align-content:center; margin-left:15px;">
+                            <div class="card" style="height: 450px; text-align: center; align-content:center; margin-left:15px; margin-bottom:15px;">
 
                                 <div style="width: 50%; margin-top: 10px; margin-left: 25%; "><img src="https://www.mupload.nl/img/cqgqp0m1ojaj.jpg" alt="Alternate Text" style="height: 100%; width:100%;" /></div>
                                 
