Followed Cora's feedback

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
@@ -2,11 +2,13 @@
         ViewData["Title"] = "Home";
 }
 
-<h2>Zon? Strand.</h2>
+@*<h2>Zon? Strand.</h2>
 <h2>Rust? Bos.</h2>
 <h2>Huisje? JoCoHome.</h2>
 
-<p>Welkom op de website van JoCoHome. Dé huisjes verhuurdienst die gespecialiseerd is in huisjes rond rustige omgevingen.</p>
+<p>Welkom op de website van JoCoHome. Dé huisjes verhuurdienst die gespecialiseerd is in huisjes rond rustige omgevingen.</p>*@
+
+<h2>Huur bij JoCoHome dé beste vakantiehuisjes!</h2>
 
 <img src="https://cdn.roompot.com/assets/imgs/vakantieparken/nederland/zeeland/roompot-beach-resort/beach-house/beach-house-6-pers/556942/accommodatie-header/640x290/70391.jpg" alt="Alternate Text" style="height: 100%; width:100%;"/>
 
