--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_LoginPartial.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_LoginPartial.cshtml
@@ -5,6 +5,12 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+    @if (User.IsInRole("Admin"))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="Admin" asp-controller="home" asp-action="Index">Admin</a>
+        </li>
+    }
     <li class="nav-item">
         <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hallo @User.Identity.Name!</a>
     </li>
