--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_LoginPartial.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav" style="line-height: 160%">
 @if (SignInManager.IsSignedIn(User))
 {
     @if (User.IsInRole("Admin"))
@@ -12,7 +12,7 @@
         </li>
     }
     <li class="nav-item">
-        <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hallo @User.Identity.Name!</a>
+        <a  class="nav-link text-light form-check-inline" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hallo @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
