--- a/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/Shared/_MainMenu.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/Shared/_MainMenu.cshtml
@@ -2,4 +2,5 @@
     <li class="header">menu</li>
     <!-- Optionally, you can add icons to the links -->
     <li><a asp-area="Admin" asp-controller="ProductAdmin" asp-action="Index"><i class="fa fa-dashboard" aria-hidden="true"></i> <span>Huisjes beheer</span></a></li>
+    <li><a asp-area="Admin" asp-controller="Nieuws" asp-action="Index"><i class="fa fa-dashboard" aria-hidden="true"></i> <span>Nieuws beheer</span></a></li>
 </ul>
