updated fotos for products e]and news

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
@@ -28,8 +28,8 @@
     {
         <div class="col-md-3" style="float:left; margin-top:25px; margin-left:5%;">
 
-            <div class="card" style="width: 18rem;">
-                <div style="left:10px; border-left:10px; width:100%; text-align:center;">
+            <div class="card" style="width: 18rem; height:400px;">
+                <div style="left:10px; border-left:10px; width:100%; height:50%; text-align:center; align-content: center;">
                     <img class="productfoto" src="@item.Foto" alt="Card image cap">
                 </div>
                 <div class="card-body" style="height:100%; top:20px;">
