--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Detailpagina.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Detailpagina.cshtml
@@ -8,7 +8,7 @@
         <a style="margin-right:10%;" href="javascript:history.back()"><i class="fa fa-angle-left" style="margin-bottom:0;padding-bottom:0;"></i> terug</a>
         <a asp-action="Index" asp-controller="Home">Home</a>
         <i class="fa fa-angle-right" style="margin-left:5px;margin-right:5px;"></i>
-        <a asp-action="Index" asp-controller="Products">Producten  >  </a>
+        <a asp-action="Index" asp-controller="Products">Huisjes  </a>
         <i class="fa fa-angle-right" style="margin-left:5px;margin-right:5px;"></i>
     </div>
 </div>
@@ -18,10 +18,10 @@
 
     <div class="kaas" style="margin-top: 5%;">
         <div class="row">
-            <div class="col">
-                <img src="https://www.mupload.nl/img/cqgqp0m1ojaj.jpg" alt="Alternate Text" style="height: 100%; width:100%;" />
+            <div style="left:10px; border-left:10px; width:25%; height:25%; text-align:center; align-content: left; float:left; position:absolute; margin-right:50px;">
+                <img class="productfoto" src=@Html.DisplayFor(m => m.Product.Image)>
             </div>
-            <div class="col-8">
+            <div class="col-8" style="width:50%; float:right; position:absolute;">
                 <dd class="col-sm-10">
                     <h1 style="white-space: nowrap;">
                         @Html.DisplayFor(m => m.Product.Titel)
