--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Nieuws/Detailpagina.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Nieuws/Detailpagina.cshtml
@@ -19,7 +19,9 @@
     <div class="kaas" style="margin-top: 5%;">
         <div class="row">
             <div class="col">
-                <img src="https://www.mupload.nl/img/cqgqp0m1ojaj.jpg" alt="Alternate Text" style="height: 100%; width:100%;" />
+                <div style="left:10px; border-left:10px; width:100%; height:100%; text-align:center; align-content: center;">
+                    <img class="productfoto" src=@Html.DisplayFor(m => m.Nieuws.Foto)>
+                </div>
             </div>
             <div class="col-8">
                 <dd class="col-sm-10">
@@ -37,7 +39,7 @@
 
                 <dd class="col-sm-10">
                     <p style="color: grey; margin-top:-2%;"> @Html.DisplayFor(m => m.Nieuws.Inhoud)</p>
-                    <p style="color: grey; margin-top:-2%;"> @Html.DisplayFor(m => m.Nieuws.Foto)</p>
+                    
                     </br>
                     <p style="color: grey; margin-top:-2%;"> @Html.DisplayFor(m => m.Nieuws.Schrijver)</p>
 
