--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
@@ -45,11 +45,11 @@
 
                             <div class="card" style="height: 550px; text-align: center; align-content:center; margin-left:15px; margin-bottom:15px;">
 
-                                <div style="left:10px; border-left:10px; width:100%; height:25%; text-align:center; align-content: center;">
-                                    <img class="productfoto" src="@item.Image" alt="Card image cap">
+                                <div style="left:10px; border-left:10px; width:100%; height:100px; text-align:center; align-content: center;">
+                                    <img class="productfoto" src="@item.Image" alt="Card image cap" style="width:90%; height:120%;">
                                 </div>
                                 
-                                <div style="width: 100%; height: 20px; margin-bottom: 20px; text-align: center; margin-top:25px;">
+                                <div style="width: 100%; height: 20px; margin-bottom: 20px; text-align: center; margin-top:25%;">
                                     <p style="color: grey; margin-top:5%;">@Html.DisplayFor(modelItem => item.Titel)</p>
                                                                 
                                     <p style="color: grey; margin-top:5%;">Land:    @Html.DisplayFor(modelItem => item.Land)</p>
