ja geen idee neer

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
@@ -16,14 +16,23 @@
 </head>
 
 @*<h2>Zon? Strand.</h2>
-<h2>Rust? Bos.</h2>
-<h2>Huisje? JoCoHome.</h2>
+    <h2>Rust? Bos.</h2>
+    <h2>Huisje? JoCoHome.</h2>
 
-<p>Welkom op de website van JoCoHome. Dé huisjes verhuurdienst die gespecialiseerd is in huisjes rond rustige omgevingen.</p>*@
+    <p>Welkom op de website van JoCoHome. Dé huisjes verhuurdienst die gespecialiseerd is in huisjes rond rustige omgevingen.</p>*@
 
 <h2>Huur bij JoCoHome dé beste vakantiehuisjes!</h2>
 
 <img src="https://cdn.roompot.com/assets/imgs/vakantieparken/nederland/zeeland/roompot-beach-resort/beach-house/beach-house-6-pers/556942/accommodatie-header/640x290/70391.jpg" alt="Alternate Text" style="height: 100%; width:100%;" />
+
+<h3>Wat kun je mij vertellen over JoCoHome?</h3>
+<p>Onderscheidend, dat is het woord dat bij JoCoHome past. Onze vakantie huizen zijn stuk voor stuk gelegen op A-locaties in Nederland. Van de Noord-Hollandse wateren tot de Limburgse heuvels, JoCoHome biedt altijd een rustieke omgeving waarbij tegelijkertijd het gemak van de stad nooit ver weg is.</p>
+
+<p>Daarnaast onderscheidt JoCoHome zich van andere aanbieders door de hoogwaardige voorzieningen en faciliteiten bij de vakantie huizen. Luxe en comfort worden naadloos gecombineerd met een topservice.</p>
+
+<p>Originaliteit is in het DNA van JoCoHome dan ook verweven met dat begrip onderscheidend, net zoals rust en ruimte enerzijds en luxe en comfort anderzijds onlosmakend met elkaar verbonden zijn.</p>
+
+<p>De dynamische organisatie van JoCoHome maakt zich dan ook hard voor de gast en de natuur in de omgeving.</p>
 
 <div style="align-content:center;">
     @foreach (var item in Model)
