--- a/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/ProductAdmin/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/ProductAdmin/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<JoCoHome_Dollo.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Huisjes";
 }
 
-<h1>Index</h1>
+@*<h1>Index</h1>*@
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nieuw huisje toevoegen</a>
 </p>
 <table class="table">
     <thead>
@@ -85,9 +85,9 @@
                 @Html.DisplayFor(modelItem => item.Omschrijving)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.ID">Wijzigen</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.ID">Verwijderen</a>
             </td>
         </tr>
 }
