--- a/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/ProductAdmin/Delete.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/ProductAdmin/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model JoCoHome_Dollo.Models.Product
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Verwijderen";
 }
 
-<h1>Delete</h1>
+@*<h1>Delete</h1>*@
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet u zeker dat u dit huisje wilt verwijderen?</h3>
 <div>
-    <h4>Product</h4>
+    @*<h4>Product</h4>*@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -81,7 +81,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Verwijderen" class="btn btn-danger" /> |
+        <a asp-action="Index">Terug naar artikelen</a>
     </form>
 </div>
