--- a/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/ProductAdmin/Details.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Areas/Admin/Views/ProductAdmin/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+@*<h1>Details</h1>*@
 
 <div>
     <h4>Product</h4>
@@ -79,6 +79,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ID">Wijzigen</a> |
+    <a asp-action="Index">Terug naar huisjes</a>
 </div>
